@@ -1,4 +1,8 @@
 ﻿===== Smarty 3.1-DEV  =====
+06/08/2011
+- bugfix {include} with scope attribute could execute in wrong scope
+- optimization of compile_check processing
+
 03/08/2011
 - allow comment tags to comment {block} tags out in child templates
 
